@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.58 2005/12/19 20:53:13 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage2_target.py,v 1.59 2006/01/17 20:39:15 rocket Exp $
 
 """
 Builder class for a LiveCD stage2 build.
@@ -24,8 +24,8 @@ class livecd_stage2_target(generic_stage_target):
 			"livecd/rcadd","livecd/rcdel","livecd/fsscript","livecd/xinitrc",\
 			"livecd/root_overlay","livecd/devmanager","livecd/users",\
 			"gamecd/conf","livecd/users","portage_overlay","livecd/cdfstype",\
-			"livecd/linuxrc","livecd/bootargs","gamecd/conf","livecd/xdm",\
-			"livecd/xsession"])
+			"livecd/fstype","livecd/linuxrc","livecd/bootargs","gamecd/conf",\
+			"livecd/xdm","livecd/xsession"])
 		
 		generic_stage_target.__init__(self,spec,addlargs)
 		if not self.settings.has_key("livecd/type"):
