@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage4_target.py,v 1.16 2006/01/10 19:32:47 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/stage4_target.py,v 1.17 2006/01/17 20:39:15 rocket Exp $
 
 """
 Builder class for stage4.
@@ -14,7 +14,7 @@ class stage4_target(generic_stage_target):
 		self.required_values=[]
 		self.valid_values=self.required_values[:]
 		self.valid_values.extend(["stage4/use","stage4/packages","stage4/root_overlay", "stage4/fsscript", \
-				"stage4/rcadd","stage4/rcdel","stage4/linuxrc","chost","cflags","ldflags","cxxflags"])
+				"stage4/rcadd","stage4/rcdel","stage4/linuxrc","chost","cflags","ldflags","cxxflags","boot/kernel"])
 		generic_stage_target.__init__(self,spec,addlargs)
 
 	def set_cleanables(self):
