@@ -1,5 +1,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.511 2006/01/17 19:30:44 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.512 2006/01/17 20:39:15 rocket Exp $
+
+  17 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
+  modules/generic_stage_target.py, modules/livecd_stage2_target.py,
+  modules/stage4_target.py:
+  fix issue where args not allowed that arose due to earlier myspec addlargs bug
 
   17 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/embedded/embedded-preclean-chroot.sh,
